# esscher_method

./: .gitignore  README.md  demo_esscher_method.ipynb  pyproject.toml
data/: data_issuers_2019-2020_market.csv  data_issuers_2020_debt.csv
esscher_method/calibrator/: Calibrator.py  LewisEuropeanTargetPricer.py  __init__.py  asset_inference.py  bounds.py  calibrator.py  data_calibration.py  esscher_solver.py  martingale_measure.py  moment_matching.py  optimization.py  pd_bootstrap.py  pricer.py
esscher_method/model/: Model.py  model.py  numerics.py  policies.py
examples/: Calibration_Executor.py  DataSaver.py  default_probability_computation.py
tests/: _recovery_helpers.py  conftest.py  test_convergence.py  test_esscher_solver.py  test_initial_guess_invariance.py  test_integration_convergence.py  test_martingale_measure.py  test_pd_bootstrap.py  test_recovery_study.py  test_regression_calibration.py  test_thread_safety.py  test_vg_convention_keys.py
