[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esscher-method"
version = "0.1.0"
description = "Esscher-based calibration and default probability computation for structural Levy models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Name" }]
keywords = ["credit-risk", "levy", "esscher", "structural-model", "variance-gamma", "bilateral-gamma"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Office/Business :: Financial",
]

# Upper bounds pin the next-major boundary for libraries whose minor /
# patch releases can shift the calibration pipeline numerically (e.g.
# default tolerances in scipy.optimize.least_squares,
# scipy.optimize.differential_evolution seeding, mpmath internal cache
# resets). The regression baselines in tests/test_regression_calibration.py
# are pinned at rtol=1e-4, atol=1e-4, so even sub-1e-3 drifts can break
# the suite; pinning to the current major line gives a known-good range.
#
# Upper bound validation: the default suite (`pytest`) passes on
# numpy 2.4.0 + scipy 1.16.3 + mpmath 1.3.0 (Python 3.13). The lower
# bound (numpy 1.23 / scipy 1.10 / mpmath 1.3) requires a separate
# Python 3.10 or 3.11 environment (numpy 1.23 has no Python 3.13
# wheels); that validation is a manual one-shot, not automated in CI.
dependencies = [
  "numpy>=1.23,<3",
  "pandas>=1.5,<3",
  "scipy>=1.10,<2",
  "mpmath>=1.3,<2",
  "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
notebook = [
  "jupyter>=1.0",
  "ipykernel>=6.20",
  "matplotlib>=3.7",
]

test = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
]

dev = [
  "black>=24.0",
  "isort>=5.12",
  "ruff>=0.6",
  "mypy>=1.7",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["esscher_method*", "examples*"]
exclude = ["venv*", "tests*"]

[tool.setuptools.package-data]
examples = ["data/**/*.xlsx", "data/**/*.csv", "data/**/*.json", "data/**/*.txt"]



[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
extend-select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Skip slow and nightly tests by default to keep the standard `pytest`
# invocation around ~8 minutes. Run the other layers explicitly:
#   pytest -m slow       extended smoke (~5 minutes)
#   pytest -m nightly    comprehensive statistical validation (hours)
addopts = "-ra -m 'not slow and not nightly'"
markers = [
  "slow: marks tests as slow (run explicitly with `pytest -m slow`; typical runtime ~5 minutes).",
  "nightly: marks tests as comprehensive statistical validation with task-spec sample sizes (run explicitly with `pytest -m nightly`; typical runtime in hours; suitable for release validation and methodological audits).",
]
